Fixed GitLab CI file to remove bundle

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,13 +4,10 @@ variables:
   JEKYLL_ENV: production
   LC_ALL: C.UTF-8
 
-before_script:
-  - bundle install
-
 test:
   stage: test
   script:
-  - bundle exec jekyll build -d test
+  - jekyll build -d test
   artifacts:
     paths:
     - test
@@ -20,7 +17,7 @@ test:
 pages:
   stage: deploy
   script:
-  - bundle exec jekyll build -d public
+  - jekyll build -d public
   artifacts:
     paths:
     - public
