--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,13 @@ variables:
   JEKYLL_ENV: production
   LC_ALL: C.UTF-8
 
+before_script:
+  - bundle install
+
 test:
   stage: test
   script:
-  - jekyll build -d test
+  - bundle exec jekyll build -d test
   artifacts:
     paths:
     - test
@@ -17,7 +20,7 @@ test:
 pages:
   stage: deploy
   script:
-  - jekyll build -d public
+  - bundle exec jekyll build -d public
   artifacts:
     paths:
     - public
